syntax = "proto3";
option go_package = ".;pb";

service FileService {
  rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse);
}

message FileInfo {
  string file_type = 1;
}

message UploadFileRequest {
  oneof data {
    FileInfo info = 1;
    bytes file_data = 2;
  }
}

message UploadFileResponse {
  string access_code = 1;
}